# torch

./: .Rbuildignore  .cirun.yml  .gitignore  404.html  CMakeLists.txt  CNAME  CONTRIBUTING.html  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  config.toml  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml  torch.Rproj
.github/: CONTRIBUTING.md
R/: R7.R  RcppExports.R  arg-to.R  autocast.R  autograd.R  backends.R  call_torch_function.R  codegen-utils.R  compare.R  compat-purrr.R  compilation_unit.R  conditions.R  contrib.R  convert.R  cpu-allocator.R  creation-ops.R  cuda.R  dataset-mnist.R  dataset-spam.R  device.R  dimname_list.R  distribution.R  distributions-bernoulli.R  distributions-categorical.R  distributions-chi2.R  distributions-constraints.R  distributions-exp-family.R  distributions-gamma.R  distributions-mixture_same_family.R  distributions-multivariate_normal.R  distributions-normal.R  distributions-poisson.R  distributions-utils.R  distributions.R  dtype.R  folder-dataset.R  gen-method.R  gen-namespace-docs.R  gen-namespace-examples.R  gen-namespace-new-docs.R  (+105 more)
articles/: amp.html  distributions.html  extending-autograd.html  index.html  indexing.html  installation.html  loading-data.html  memory-management.html  modifying-source-code.html  python-to-r.html  serialization.html  tensor-creation.html  torchscript.html  torchscript.md  using-autograd.html
bench/: bench-dataloader.R  bench-dispatch.R  bench-gpt2.R  bench-indexing.R  bench-shm.R  bench-torch.R  dispatch-results.md  small-nn.R
data/: homepage.yaml  packages.yml
dev/: 404.html  CONTRIBUTING.html  LICENSE-text.html  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docker/: Dockerfile  build_env_guide.md  cuda-092  cuda-101  cuda-102  cuda-110  cuda-111  cuda-113  cuda-116  docker-compose.yml
docs/: 404.html  CONTRIBUTING.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml
headers/: CMakeLists.txt
headers/src/: main.cpp
lantern/: CMakeLists.txt  README.md
lantern/headers/src/: main.cpp
lantern/include/lantern/: lantern.h  types.h
lantern/src/: Allocator.cpp  AllocatorCuda.cpp  AllocatorUtils.h  Autograd.cpp  Autograd.h  Backends.cpp  Compile.cpp  Cuda.cpp  Delete.cpp  Device.cpp  Dimname.cpp  Dtype.cpp  Function.cpp  Function.h  Generator.cpp  IValue.cpp  Indexing.cpp  JITTypes.cpp  Layout.cpp  MemoryFormat.cpp  NNUtilsRnn.cpp  QScheme.cpp  Quantization.cpp  Reduction.cpp  Save.cpp  Scalar.cpp  Script.cpp  ScriptModule.cpp  Stack.cpp  Storage.cpp  Tensor.cpp  TensorList.cpp  TensorOptions.cpp  Threads.cpp  Trace.cpp  base64.hpp  lantern.cpp  utils.cpp  utils.hpp
lantern/src/Contrib/: Sparsemax.cpp
lantern/src/Contrib/SortVertices/: README  cuda_utils.h  sort_vert.cpp  sort_vert.h  sort_vert_cpu.cpp  sort_vert_kernel.cu  utils.h
lantern/tests/: init.cpp  main.cpp
layouts/: index.html
man/: AutogradContext.Rd  Constraint.Rd  Distribution.Rd  OptimizerIgnite.Rd  as.array.tensor.Rd  as.matrix.tensor.Rd  as_array.Rd  autograd_backward.Rd  autograd_function.Rd  autograd_grad.Rd  autograd_set_grad_mode.Rd  backends_cudnn_is_available.Rd  backends_cudnn_version.Rd  backends_mkl_is_available.Rd  backends_mkldnn_is_available.Rd  backends_mps_is_available.Rd  backends_openmp_is_available.Rd  broadcast_all.Rd  call_torch_function.Rd  clone_module.Rd  contrib_sort_vertices.Rd  cpu_cache_flush.Rd  cuda_amp_grad_scaler.Rd  cuda_current_device.Rd  cuda_device_count.Rd  cuda_dump_memory_snapshot.Rd  cuda_empty_cache.Rd  cuda_get_device_capability.Rd  cuda_is_available.Rd  cuda_memory_snapshot.Rd  cuda_memory_stats.Rd  cuda_record_memory_history.Rd  cuda_runtime_version.Rd  cuda_synchronize.Rd  dataloader.Rd  dataloader_enum.Rd  dataloader_get_next.Rd  dataloader_make_iter.Rd  dataloader_next.Rd  dataset.Rd  (+720 more)
news/: index.html
po/: R-fr.mo  R-fr.po  R-torch.pot  fr.mo  fr.po  torch.pot
reference/: AutogradContext.html  Constraint.html  Distribution.html  OptimizerIgnite.html  OptimizerIgnite.md  as_array.html  autograd_backward.html  autograd_function.html  autograd_grad.html  autograd_set_grad_mode.html  autograd_set_grad_mode.md  backends_cudnn_is_available.html  backends_cudnn_version.html  backends_mkl_is_available.html  backends_mkldnn_is_available.html  backends_mps_is_available.html  backends_openmp_is_available.html  broadcast_all.html  buffer_from_torch_tensor.html  call_torch_function.html  clone_module.html  contrib_sort_vertices.html  cuda_amp_grad_scaler.html  cuda_current_device.html  cuda_device_count.html  cuda_dump_memory_snapshot.html  cuda_empty_cache.html  cuda_get_device_capability.html  cuda_is_available.html  cuda_memory_snapshot.html  cuda_memory_stats.html  cuda_record_memory_history.html  cuda_runtime_version.html  cuda_runtime_version.md  cuda_synchronize.html  dataloader.html  dataloader_make_iter.html  dataloader_next.html  dataset.html  dataset.md  (+847 more)
revdep/: README.md  cran.md  failures.md  problems.md
src/: .gitignore  Autograd.cpp  Delete.cpp  Device.cpp  Dimname.cpp  Dtype.cpp  Function.cpp  Function.h  Generator.cpp  Makevars  Makevars.in  (+58 more)
src/lantern/: CMakeLists.txt  README.md  lantern.h
src/lantern/headers/: CMakeLists.txt
src/lantern/headers/src/: main.cpp
src/lantern/include/lantern/: lantern.h  types.h
src/lantern/src/: Allocator.cpp  AllocatorCuda.cpp  AllocatorMPS.cpp  AllocatorUtils.h  Amp.cpp  Autograd.cpp  Backends.cpp  Cuda.cpp  Delete.cpp  Dimname.cpp  Dtype.cpp  Function.cpp  Generator.cpp  Ignite.cpp  Indexing.cpp  JITExecute.cpp  Layout.cpp  NNUtilsRnn.cpp  Pickler.cpp  Quantization.cpp  Reduction.cpp  Save.cpp  Scalar.cpp  ScriptModule.cpp  Stack.cpp  Tensor.cpp  TensorList.cpp  TensorOptions.cpp  Trace.cpp  Unpickler.cpp  Unpickler.h  base64.hpp  lantern.cpp  utils.cpp  utils.hpp
src/lantern/src/Contrib/: Sparsemax.cpp
src/lantern/src/Contrib/SortVertices/: sort_vert.cpp
(+4319 files in other folders)
